aws/RouteTables-eu-west-2.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true, 
     "RouteTableAssociationId": "rtbassoc-9f5c9df6", 
     "RouteTableId": "rtb-5f629836"
    }
   ], 
   "PropagatingVgws": [], 
   "RouteTableId": "rtb-5f629836", 
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16", 
     "GatewayId": "local", 
     "Origin": "CreateRouteTable", 
     "State": "active"
    }, 
    {
     "DestinationCidrBlock": "0.0.0.0/0", 
     "GatewayId": "igw-1a827f73", 
     "Origin": "CreateRoute", 
     "State": "active"
    }
   ], 
   "Tags": [], 
   "VpcId": "vpc-e618e38f"
  }
 ]
}
